# Digital_child

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260601_0001_social_simulation_phase1_2.py  20260602_0002_child_growth_mvp.py  20260618_0003_child_multimodal_observation.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/clients/: __init__.py  graphiti_client.py  letta_client.py  lightrag_client.py  mem0_client.py  vendor_bootstrap.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: api.py
backend/app/services/: audio_transcription.py  chat_service.py  conflict_resolver.py  context_builder.py  eval_runner.py  media_preprocessor.py  media_storage.py  memory_extractor.py  (+5 more)
backend/tests/: test_audio_transcription.py  test_auth_roles.py  test_chat_service.py  test_child_growth_mvp.py  test_child_multimodal_api.py  test_child_multimodal_observation.py  test_child_multimodal_safety.py  test_concordia_adapter.py  test_conflict_resolver.py  test_db_init.py  test_generated_persona_create.py  test_letta_client.py  test_main.py  test_media_preprocessor.py  test_memory_extractor.py  test_persona_generator.py  test_privacy_filter.py  test_retrieval_router.py  test_simulation_api.py  test_simulation_engine.py  test_simulation_memory_writer.py  test_simulation_rules_random_events.py  test_vision_model.py
(+58 files in other folders)
