[project]
name = "human-memory-orchestrator"
version = "0.1.0"
description = "Letta + mem0 + Graphiti + LightRAG memory orchestration backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "orjson>=3.10.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "structlog>=25.1.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
integrations = [
    "letta-client>=1.7.12",
    "mem0ai>=2.0.4",
    "graphiti-core>=0.29.1",
    "lightrag-hku[api]>=1.5.0rc3",
    "qdrant-client>=1.12.0",
    "neo4j>=5.26.0",
]
simulation = [
    "gdm-concordia[openai]>=2.4.0,<3",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]
